@@ -19,6 +19,7 @@ depth: 1
 ### Bug fixes
 
  * Show not-`None` falsy values instead of blank in generic table cell template (Sage Abdullah)
+ * Fix `read_only` panels for fields with translatable choice labels (Florent Lebreton)
 
 ### Documentation
 
